--- a/docutils/pyproject.toml
+++ b/docutils/pyproject.toml
@@ -1,6 +1,7 @@
 # Project configuration file for the "docutils" package (see PEP 518)
 
-# Build with flit (https://flit.pypa.io/)
+# Use flit as a build backend (https://flit.pypa.io/)
+# Build with (https://build.pypa.io/)
 [build-system]
 requires = ["flit_core>=3.4,<4"]
 build-backend = "flit_core.buildapi"
@@ -8,9 +9,7 @@ build-backend = "flit_core.buildapi"
 # Project metadata
 # cf. https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
 [project]
-
 name = "docutils"
-dynamic = ["version"]
 description = "Docutils -- Python Documentation Utilities"
 readme.text = """
 Docutils is a modular system for processing documentation
@@ -18,11 +17,8 @@ into useful formats, such as HTML, XML, and LaTeX.  For
 input Docutils supports reStructuredText, an easy-to-read,
 what-you-see-is-what-you-get plaintext markup syntax."""  # wrap at col 60
 readme.content-type = "text/plain"
-
 urls.Homepage = "https://docutils.sourceforge.io"
-
 license.file = "COPYING.txt"
-
 requires-python = ">=3.9"
 
 # cf. https://pypi.org/trove-classifiers/
@@ -77,6 +73,7 @@ classifiers = [
         'Natural Language :: Swedish',
         'Natural Language :: Ukrainian',
 ]
+dynamic = ["version"]
 
 [[project.authors]]
 name = "David Goodger"
@@ -103,7 +100,6 @@ rst2xml = "docutils.core:rst2xml"
 # Sdist (*.tar.gz) generation
 [tool.flit.sdist]
 
-# required as ``flit --use-vcs`` only works for git and hg (current default)
 # TODO: include generated HTML ?
 include = [
     "*.txt",
