--- a/docutils/.ruff.toml
+++ b/docutils/.ruff.toml
@@ -8,6 +8,7 @@ select = [
     "E",    # pycodestyle
     "EXE",  # flake8-executable
     "F",    # pyflakes
+    "FA",   # flake8-future-annotations
     "W",    # pycodestyle
 ]
 ignore = [
