--- a/docutils/.ruff.toml
+++ b/docutils/.ruff.toml
@@ -14,6 +14,7 @@ select = [
     "INP",  # flake8-no-pep420
     "INT",  # flake8-gettext
     "LOG",  # flake8-logging
+    "PGH",  # pygrep-hooks
     "W",    # pycodestyle
 ]
 ignore = [
