--- a/docutils/.ruff.toml
+++ b/docutils/.ruff.toml
@@ -15,6 +15,7 @@ select = [
     "INT",  # flake8-gettext
     "LOG",  # flake8-logging
     "PGH",  # pygrep-hooks
+    "PIE",  # flake8-pie
     "W",    # pycodestyle
 ]
 ignore = [
