--- a/docutils/.ruff.toml
+++ b/docutils/.ruff.toml
@@ -19,6 +19,7 @@ select = [
     "PT",   # flake8-pytest
     "RSE",  # flake8-raise
     "SLOT", # flake8-slots
+    "T10",  # flake8-debugger
     "W",    # pycodestyle
 ]
 ignore = [
