--- a/docutils/.ruff.toml
+++ b/docutils/.ruff.toml
@@ -23,6 +23,7 @@ select = [
     "TCH",  # flake8-type-checking
     "TID",  # flake8-tidy-imports
     "W",    # pycodestyle
+    "YTT",  # flake8-2020
 ]
 ignore = [
     "E226",  # missing whitespace around arithmetic operator
