--- a/docutils/docutils.conf
+++ b/docutils/docutils.conf
@@ -22,6 +22,8 @@ table-style: colwidths-grid
 
 [buildhtml application]
 writer: html5
-# Prevent tools/buildhtml.py from processing certain text files.
-ignore: GPL2.rst:header.rst:header0.rst:header2.rst:cheatsheet.rst
+# Prevent tools/buildhtml.py from processing certain files.
+ignore: header.rst:header0.rst:header2.rst:cheatsheet.rst
+# ignore *.txt files:
+sources: *.rst
 prune: build:dist:docutils:docutils.egg-info:licenses:test:tools
