--- a/docutils/.ruff.toml
+++ b/docutils/.ruff.toml
@@ -18,6 +18,7 @@ select = [
     "ICN",  # flake8-import-conventions
     "INP",  # flake8-no-pep420
     "INT",  # flake8-gettext
+    "ISC",  # flake8-implicit-str-concat
     "LOG",  # flake8-logging
     "PERF", # perflint
     "PGH",  # pygrep-hooks
